tests/types/errors/query_skip_int_required.mochi
// `skip` counts rows; the operand must be `int` (T055).
let xs: list<int> = [1, 2, 3]
let bad = from x in xs skip 1.5 select x
